--- a/Views/AnnouncementWindow.xaml
+++ b/Views/AnnouncementWindow.xaml
@@ -2,8 +2,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:resources="clr-namespace:GHPC_Mod_Manager.Resources"
+        xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
         Title="{x:Static resources:Strings.Announcement}"
-        Width="600" Height="500"
+        Width="600" Height="800"
         WindowStartupLocation="CenterOwner"
         ResizeMode="CanResize"
         Background="{DynamicResource SurfaceBrush}">
@@ -31,11 +32,10 @@
         </StackPanel>
 
         <!-- Markdown content -->
-        <ScrollViewer Grid.Row="0" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto"
-                      Visibility="{Binding HasContent, Converter={StaticResource BooleanToVisibilityConverter}}">
-            <WebBrowser x:Name="AnnouncementBrowser" 
-                       Margin="0,0,0,10"/>
-        </ScrollViewer>
+        <wv2:WebView2 x:Name="AnnouncementWebView"
+                     Grid.Row="0" Margin="0,0,0,10"
+                     Visibility="{Binding HasContent, Converter={StaticResource BooleanToVisibilityConverter}}"
+                     NavigationCompleted="AnnouncementWebView_NavigationCompleted"/>
 
         <!-- No content message -->
         <TextBlock Grid.Row="0" Text="No announcement available" 
