--- a/Views/MainView.xaml
+++ b/Views/MainView.xaml
@@ -434,7 +434,12 @@
             <!-- Translation Management Tab -->
             <TabItem Header="{x:Static resources:Strings.TranslationManagement}">
                 <Grid Margin="20">
-                    <StackPanel VerticalAlignment="Top">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="300"/>
+                    </Grid.ColumnDefinitions>
+
+                    <StackPanel Grid.Column="0" VerticalAlignment="Top">
                         <GroupBox Header="{x:Static resources:Strings.TranslationSystem}" Margin="0,0,0,20">
                             <StackPanel Margin="10">
                                 <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
@@ -528,6 +533,24 @@
                             </StackPanel>
                         </GroupBox>
                     </StackPanel>
+
+                    <!-- 右侧双语提示区域 -->
+                    <Border Grid.Column="1" Margin="20,0,0,0"
+                            Padding="15"
+                            Background="{DynamicResource SurfaceVariantBrush}"
+                            CornerRadius="{DynamicResource RadiusMedium}"
+                            Visibility="{Binding IsTranslationInstalled, Converter={StaticResource BooleanToVisibilityConverter}}">
+                        <StackPanel>
+                            <TextBlock Text="{x:Static resources:Strings.TranslationTipsTitle}"
+                                       FontWeight="SemiBold"
+                                       FontSize="14"
+                                       Margin="0,0,0,10"/>
+                            <TextBlock Text="{x:Static resources:Strings.TranslationTipsContent}"
+                                       TextWrapping="Wrap"
+                                       LineHeight="20"
+                                       Foreground="{DynamicResource OnSurfaceVariantBrush}"/>
+                        </StackPanel>
+                    </Border>
                 </Grid>
             </TabItem>
         </TabControl>
